--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Easy Resume a Personal Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title> 
+<title>Chile | Home</title> 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Easy Resume Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-	SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Custom Theme files -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all"> 
 <link rel="stylesheet" href="css/lightbox.css"> 
-<!-- //Custom Theme files -->
-<!-- js -->
 <script src="js/jquery-2.2.3.min.js"></script> 
-<!-- //js -->
-<!-- web-fonts -->
 <link href='//fonts.googleapis.com/css?family=Text+Me+One' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-<!-- //web-fonts --> 
 </head>
 <body>
 	<!-- top-nav -->
@@ -29,7 +21,6 @@
 					Menu
 				</button>
 			</div>
-			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<div class="menu">
 					<ul class="nav navbar"> 
@@ -44,9 +35,6 @@
 			</div>
 		</div>
 	</div>	
-	<!-- //top-nav -->
-	
-	<!-- banner --> 
 	<div class="video" data-vide-bg="video/cv">  
 		<div class="container">
 			<div class="banner-text agileinfo-text">  
@@ -56,8 +44,6 @@
 		</div>	
 	</div>	
 	<script src="js/jquery.vide.min.js"></script>
-	<!-- //banner --> 
-	<!-- modal-about -->
 	<div class="modal fade modal-about" id="about" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content"> 
@@ -125,8 +111,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- //modal-about -->
-	<!-- modal-skills -->
 	<div class="modal fade modal-skills" id="skill" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content"> 
@@ -143,9 +127,9 @@
 								<div class="progress-bar progress-bar-striped active" style="width: 95%">
 								</div>
 							</div>
-							<h6>OOP <span> 90% </span></h6>
+							<h6>OOP <span> 56% </span></h6>
 							<div class="progress">
-								<div class="progress-bar progress-bar-striped active" style="width: 90%">
+								<div class="progress-bar progress-bar-striped active" style="width: 56%">
 								</div>
 							</div>
 							<h6>Algorithm and Data Structure <span> 85% </span></h6>
@@ -238,8 +222,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- //modal-skills -->
-	<!-- modal-experience -->
 	<div class="modal fade modal-experience" id="experience" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content"> 
@@ -298,8 +280,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- //modal-experience -->
-	<!-- modal-education -->
 	<div class="modal fade modal-experience" id="education" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content"> 
@@ -326,19 +306,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- //modal-contact --> 
-	
-	<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<p>© 2016 Easy Resume. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-		</div>
-	</div>
-	<!-- //footer --> 
-	
-	<!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
